[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lhd-retrieve"
version = "0.1.0"
description = "Python interface for LHD (Large Helical Device) measurement data retrieval"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Kenji Ueda", email = "uedakenji@example.com"},
]
keywords = ["plasma", "physics", "LHD", "data", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "matplotlib>=3.5.0",
]
plotting = [
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/UedaKenji/lhd-retrieve"
Repository = "https://github.com/UedaKenji/lhd-retrieve"
Issues = "https://github.com/UedaKenji/lhd-retrieve/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lhd_retrieve*"]

[tool.setuptools.package-data]
lhd_retrieve = ["*.md"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]